--- a/LECTURE12.Rmd
+++ b/LECTURE12.Rmd
@@ -46,7 +46,7 @@ PVA is used for assessing how stochasticity and inbreeding can lead to extinctio
 
 ### The PVA process (recipe for PVA!)
 
-![](PVAschematic1.png) 
+![](PVAschematic1.png){width=40%}
 
 The process of building a PVA model is **iterative**. 
 
