--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -38,7 +38,7 @@ In large populations, random forces are just not strong enough to eradicate a re
 
 In small populations, random chance can be the *primary driver* of genetic change over time! 
 
-![](geneticdrift1.png)
+![](geneticdrift1.png){width=75%}
 
 Let's imagine that the balls in the jars in the above figure are individuals. The black dots indicate how many offspring each individual will have (thereby passing on its genes). The different colored balls represent different genetic variants. Each jar, left to right, represents a different (non-overlapping) generation. 
 
@@ -52,7 +52,7 @@ In a much larger population, the possibility of losing this drought-resistance a
 
 ### Inbreeding depression
 
-![](inbreeding1.jpg)
+![](inbreeding1.jpg){width=50%}
 
 Inbreeding depression is another problem peculiar to small populations.
 
@@ -98,18 +98,18 @@ Population Viability Analysis (PVA) is often used to model the processes involve
 
 The most widely-used PVA software, [Vortex](https://www.cpsg.org/our-approach/science-based-tools/vortex), gets its name from the extinction vortex concept. Vortex does allow explicit modeling of inbreeding and loss of genetic diversity in small populations.  
 
-![](vortex10.jpg)
+![](vortex10.jpg){width=50%}
 
 
 ## Example: Aruba island rattlesnake
 
 The Aruba Island Rattlesnake, or Cascabel (*Crotalus durissus unicolor*), is the top predator on the island of Aruba, and primarily consumes rodents. 
 
-![](aruba_rattlesnake1.jpg)
+![](aruba_rattlesnake1.jpg){width=50%}
 
 The Aruba island rattlesnake, as you might expect, occurs only on the island of Aruba.
 
-![](aruba1.png)
+![](aruba1.png){width=50%}
 
 The Aruba rattlesnake was listed as *Critically Endangered* by IUCN (it is no longer listed as of 2021 due to lack of information), and has several attributes that make it particularly susceptible to falling into the extinction vortex:
 
