--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -96,11 +96,11 @@ Please try to cite at least 3-5 references in your introduction. For intro and a
 
 
 ### Methods
-This is where you describe your PVA in enough detail that it *could be replicated* by another wildlife researcher! You can recycle much of your "initial PVA" assignment here.
+This is where you describe your PVA in enough detail that it *could be replicated* by another wildlife researcher! You can recycle much of your "initial PVA" assignment here. 
 
 Remember to justify all your decisions. Every parameter value you use (survival rates, abundance, birth rate, carrying capacity, etc.) and every factual statement you make needs to have a citation. It needs to be clear where every single number in your model came from. You also need to justify the time frame for your model- you should not just use a 20-year simulation time frame just because it is the default for InsightMaker (and if you do use a 20-year time frame you need to be very specific about why- otherwise I’ll assume you simply did not change the default!).
 
-Unlike the "initial PVA" assigment, this time you need to use complete sentences- no bulleted lists please! Also, try to avoid using InsightMaker jargon (RandPoisson, stocks, flows, links, ghost primitive, etc.). Instead, try to describe your model using "plain English".    
+Unlike the "Initial PVA and Methods" assignment, this time you need to use complete sentences- no bulleted lists please! Also, try to avoid using InsightMaker jargon (RandPoisson, stocks, flows, links, ghost primitive, etc.). Instead, try to describe your model using "plain English".    
 
 The methods section should detail more than just how you put your model together- it should also detail how you used the model to test your research questions.   
 
@@ -110,17 +110,17 @@ The methods section should detail more than just how you put your model together
     - How did you visualize the results?     
     - Did you perform any statistical analyses?  
     
-In general, try to avoid including figures and tables reproduced from other studies. Just describe the key results in words and refer to the original source. Including these figures in your paper implies you created the figure!
+In general, try to avoid including figures and tables reproduced from other studies. Just describe the key results in words and refer to the original source. Including these figures in your paper implies you created the figure yourself!
 
 You need to define what you mean by ‘viability’, since there is no standard definition. If you are assessing minimum viable population size (MVP), you need to define your viability criterion- for example, ‘we considered populations with extinction risk less than 5% over 50 years to be viable'.
 
 Try to avoid using acronyms like PVA and MVP without first defining what stand for.
 
-Most of you will use female-only models- and if so you should state this explicitly.
+Most of you will use female-only models- and if so you should state this explicitly, and describe how you accounted for this in your fecundity estimates (e.g., you assumed a 50% sex ratio, and therefore you multiplied the total birth rate by 50% to estimate the total number of female offspring produced per female).
 
 For both the methods and results, use the past tense- you are describing what you did, not what you will do.
 
-Please include a link to your InsightMaker model in your Methods section. If you used R, please provide your R code as an appendix.
+Please include a link to your InsightMaker model in your Methods section (ideally, at the top of your methods section, just to make it easier on me to find it!). If you used R, please provide your R code as an appendix.
 
 ### Results
 
@@ -128,14 +128,16 @@ This is where you describe and present the relevant outputs from your model. Pro
 
 With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it *relevant* to your main questions?
 
-All figures need figure numbers and captions. Figure captions can be several sentences long and should have enough detail so that a reader can understand the figure without referring to the main text. All figure captions should include the name of the species being studied, should describe what axes represent and describe any symbols that are used. Figure captions should also describe where the data come from (in most cases, a population simulation model!).
+All figures need figure numbers and captions. Figure captions can be several sentences long and should have enough detail so that a reader can understand the figure without referring to the main text. All figure captions should include the name of the species being studied, should describe what the axes represent and describe any symbols/colors that are used. Figure captions should also describe where the data come from (in most cases, a population simulation model!).
 
 If you want to include a table from insightmaker, please import your insightmaker table results to excel so you can format nicely (rather than presenting a screenshot of an insightmaker table). Also try to avoid fractional individuals in your tables
-Don’t be constrained to insightmaker’s figures!
 
+Don’t be constrained to insightmaker’s figures! See the ["PVA" lecture](LECTURE12.html) for some examples of the kinds of figures you might make to present your results most effectively. Don't feel like you have to use R to make your figures- Excel is fine!! 
+
+It's okay to include one or two insightmaker figures (abundance over time), but for most of you it will be better (more concise, more informative) to summarize your results in a different way (like illustrating final abundance for each scenario as a bar plot, with each scenario presented side by side). Sometimes it helps to sketch out what you want the figure to look like, and then work "backwards" to try and figure out how to make that figure.
 
 ### Discussion
-This is where you describe what your results really tell us with respect to your main questions.
+This is where you describe what your results really tell us with respect to your main questions. The first paragraph in your discussion section should summarize the key results and why they are important. Include citations/references to other studies to indicate where your study fits into a broader context. I expect to see at least 3-4 in-text citations in your Discussion section.
 
 Also, in your discussion you should:
 
@@ -147,27 +149,15 @@ Limit your discussion of 'flaws' in your study to a single paragraph. And don’
  
 Let me know if you have any questions or would like to go over anything before your final submission.
 
-
 A rubric for the final written presentation can be found [here](WrittenProject_rubric.docx). 
 
-
-## Fourth project-related assignment: the oral presentation!
-
-Your group presentation should be in the style of an oral presentation at a conference. See below for guidance on giving a good oral presentation! 
-
-Presentations will take place during our final two lab periods. 
-
-You will have 12 minutes to give your presentations, with 3 additional minutes for questions.  
-
-A rubric for the presentations can be found [here](presentationProject_rubric.docx)
-
-## Final paper peer review/feedback session
+## Fourth project-related assignment: **peer review**/feedback session
 
 In lab on Fri Apr 28 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
 
 The way it will work is as follows:
 
-1. In the week before the peer review you will receive another group's draft manuscript via WebCampus. 
+1. In the week before the peer review (probably Wednesday) you will receive another group's draft manuscript via WebCampus. 
 
 2. Before lab, please thoroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
 
@@ -177,7 +167,22 @@ The way it will work is as follows:
 
 5. For any remaining time in lab, you will have a chance to work on your write-ups and presentations!
 
-Bring your laptops to lab as usual so you can write, save and share your peer-review electronically with your classmates/instructors. 
+Bring your laptops to lab as usual so you can write, save and share your peer-review electronically with your classmates/instructors.
+
+The peer-review session will take approximately 2 hours in total, please plan accordingly!
+
+
+## Fifth project-related assignment: the oral presentation!
+
+Your group presentation should be in the style of an oral presentation at a conference. See below for guidance on giving a good oral presentation! 
+
+Presentations will take place during our final two lab periods. 
+
+You will have 12 minutes to give your presentations, with 3 additional minutes for questions.  
+
+A rubric for the presentations can be found [here](presentationProject_rubric.docx)
+
+Please plan to be in lab for the full lab period on May 5 for the final presentations. Attendance and participation as an active audience member (e.g., asking questions!) is an important part of this class.  
 
 
 ### Tips for a great presentation!
@@ -235,10 +240,6 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 #### Acknoweldgements   
 
 - Your final slide should acknowledge people who helped you with your project but who are not listed as a co-author.
-
-
-
-
 
 
 ## Potentially useful links!
