--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -74,11 +74,14 @@ Your **initial parameterized PVA model** will consist of:
 
 3. Any questions for your instructor/TA about your model that you'd like to go over during our next project meeting (remember to sign up for a meeting on our shared Google Sheet!).
     
-## Third project-related assignment: the written project (rough draft)!
+## Third project-related assignment: the written project (rough draft and final draft)!
 
 Your final written paper is expected to be in the style of a **scientific manuscript**. That is, it should have a *title*, *introduction*, *methods*, *results*, *discussion*, *acknowledgements* and *literature cited* sections. Please also include your working PVA model (e.g., InsightMaker link or R code). 
 
 **There are no formatting guidelines or page limits**. Please be as concise as possible while still covering all the key elements in the grading rubric. You can use any standard format for your references (e.g., APA), all we ask is that you be consistent!
+
+### Abstract
+An abstract is often the most critical part of a scientific manuscript- because it's often the only part that many people read! A good abstract effectively summarizes everything in the paper- what the study is about, why readers should care, what the research questions are, how you answered your questions and what your key findings were, and what the findings mean in a broader context. All in about 250 words or less!   
 
 ### Title
 A good title should be informative, should have the species name and should at least hint at what the research question is and its relevance to conservation/management.
