--- a/LECTURE18.Rmd
+++ b/LECTURE18.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming final exam
 
-
 **when and where** The (optional) final exam is on Friday **May 12** (9:50am to 11:50) in our regular classroom. You will have the whole two hour period to take the exam (but you should not need the whole period). The exam will be in the same basic format as the midterm exams.
 
 **what** The exam will cover all material covered in lectures and lab.
@@ -41,7 +40,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
     * [Declining-population paradigm](LECTURE11.html) 
     * [Population Viability Analysis](LECTURE12.html)
     * [Metapopulations and source-sink dynamics](LECTURE13.html)]
-    * [Parameter estimation](LECTURE15.html)
+    * [Parameter estimation](LECTURE15.html) [NOTE: this topic will not be covered in the exam this year]
     * [Competition models](LECTURE16.html)
     * [Predation models](LECTURE17.html)
     * NOTE: all lectures have been recorded and are available via the "Zoom" link on WebCampus in case you missed any or in case you'd like to use these recordings as review/study materials   
@@ -63,9 +62,9 @@ We will do an optional review session in class on Wed May 10 (regular class time
 
 Sage will also provide an additional final office hour on Thursday May 11 (look for announcement).
 
-NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html)- this topic will (of course) *not be included on the final exam*
+NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html) and the [lecture on parameter estimation](LECTURE15.html)- these topics will *not be included on the final exam*
 
-*The exam will consist of a mixture of multiple-choice and short-answer questions (including a few definitions).*
+*The exam will consist of a mixture of multiple-choice and short-answer questions (perhaps including a few definitions).*
 
 ### Final logistics
 
@@ -80,13 +79,13 @@ NOTE: we skipped over the [lecture on individual-based models](LECTURE10.html)- 
 
 #### Extra credit
 
-- Will accept up to three extra credit write-ups
-- Submit extra credit assignments via webcampus (file submission) -- one submission per each of the four 'assignments'.
+- Will accept up to two extra credit write-ups
+- Submit extra credit assignments via webcampus (file submission) -- one submission per each assignment.
 - Due when final papers are due, by Mon May 15 at 11:59pm).
 
 #### Review session
 
-- Wed 5/10 at 930am in our regular classroom.
+- Wed 5/10 at 10am in our regular classroom.
 
 #### PLEASE fill out your course evaluations!
 
