--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -61,17 +61,6 @@ In this class (and beyond), _don't be afraid to model messy systems_. And above 
 
 Of course, this means not just reading and listening to lectures, it means *learning by doing*! Instructor-led lectures will be kept short, and we will spend significant class time (and pretty much all of lab time) on our computers, working through problems.
 
-## Class example: harvest of horseshoe crabs in Delaware Bay
-
-Real-world example- we will revisit throughout the class!
-
-![](rekn_hsc1.png){width=50%}
-
-*Why harvest horseshoe crabs?* Eel and Whelk ("Conch") fisheries rely on horseshoe crabs as bait. 
-
-*Why restrict horseshoe crab harvest?* Red Knots and other shorebirds depend on horseshoe crab eggs as a key source of energy when migrating northward in the spring!
-
-**Problem statement**: "Manage harvest of horseshoe crabs in the Delaware Bay to maximize harvest but also to maintain ecosystem integrity, provide adequate stopover habitat for migrating shorebirds, and ensure that the abundance of horseshoe crabs is not limiting the red knot stopover population or slowing recovery"
 
 ## In-class Exercise: InsightMaker
 
@@ -120,6 +109,22 @@ Just for fun, here is a cool video of the Lorenz Attractor, which we saw earlier
 
 
  
+```{r echo=FALSE, eval=FALSE}
+
+# ## Class example: harvest of horseshoe crabs in Delaware Bay
+# 
+# Real-world example- we will revisit throughout the class!
+# 
+# ![](rekn_hsc1.png){width=50%}
+# 
+# *Why harvest horseshoe crabs?* Eel and Whelk ("Conch") fisheries rely on horseshoe crabs as bait. 
+# 
+# *Why restrict horseshoe crab harvest?* Red Knots and other shorebirds depend on horseshoe crab eggs as a key source of energy when migrating northward in the spring!
+# 
+# **Problem statement**: "Manage harvest of horseshoe crabs in the Delaware Bay to maximize harvest but also to maintain ecosystem integrity, provide adequate stopover habitat for migrating shorebirds, and ensure that the abundance of horseshoe crabs is not limiting the red knot stopover population or slowing recovery"
+
+
+```
 
 
 
