--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A whole-systems approach to population ecology"
 author: "NRES 470/670"
-date: "Spring 2023"
+date: "Spring 2024"
 output: 
   html_document: 
     theme: spacelab
@@ -20,9 +20,7 @@ Ecology is messy. When we work in natural environments, we are dealing with *inh
 
 We can think of humans as just another element in these complex systems. And wildlife conservation and management is the task of manipulating these linkages to meet societal objectives for natural systems.  
 
-This is not a systems ecology class! 
-
-BUT, systems thinking provides a great framework for understanding natural populations, and understanding how linkages (abiotic and biotic environments) might affect them, and how to manage natural populations effectively. 
+Although this is not a systems ecology class, systems thinking provides a great framework for understanding natural populations, and understanding how linkages (abiotic and biotic environments) might affect them, and how to manage natural populations effectively. 
 
 ## Emergent properties
 This is one of the most powerful ideas in whole-systems thinking -- when you put many interacting, linked parts together, systems often behave in interesting and unexpected ways! 
@@ -37,7 +35,7 @@ And here's a more abstract example that illustrates some really cool and complex
 
 [Lorenz attractor](https://insightmaker.com/insight/1829/Lorenz-Attractor)
 
-[PointSolutions]: emergent properties question
+[Top Hat]: emergent properties question
 
 ## *InsightMaker*: a modeling framework for systems thinking!
 
